fix: Package references

--- a/test/commodore64-example/platformio.ini
+++ b/test/commodore64-example/platformio.ini
@@ -1,4 +1,4 @@
 [env:default]
-platform=mos
+platform=https://github.com/pr1metine/platform-mos.git
 framework=llvm-mos-sdk
 board=generic_commodore64
